Do not iterate all tiles for resizing when the content didn't change https://bugs.webkit.org/show_bug.cgi?id=79787

Reviewed by Simon Hausmann.

* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::createTiles):

Canonical link: https://commits.webkit.org/96976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109219 268f45cc-cd09-0410-ab3c-d52691b4dbfc